--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/edit"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:clickable="true"
                 android:src="@drawable/pencil" />
 
             <TextView
