Third commit - delete course

--- a/app/src/main/res/layout/new_course_dialog.xml
+++ b/app/src/main/res/layout/new_course_dialog.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="16dp">
+
     <EditText
         android:id="@+id/course_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Course Name"/>
+        android:hint="Course Name" />
+
     <EditText
         android:id="@+id/course_credit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/course_name"
-        android:hint="Course Credits"/>
+        android:hint="Course Credits"
+        android:inputType="number" />
+
     <EditText
         android:id="@+id/course_grade"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/course_credit"
         android:hint="Grade"
-        android:inputType="number"/>
+        android:inputType="number" />
 </RelativeLayout>
