--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
     </FrameLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="50dp"
@@ -50,12 +50,22 @@
             android:textColor="#FFFFFF" />
 
         <Button
+            android:id="@+id/remindersButton"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/rounded_edge"
+            android:text="Reminders"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF" />
+
+        <Button
             android:id="@+id/alarmButton"
             android:layout_width="200dp"
             android:layout_height="80dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/rounded_edge"
-            android:text="Set Alarms"
+            android:text="Set Alarm"
             android:textAllCaps="false"
             android:textColor="#FFFFFF" />
     </LinearLayout>
