--- a/app/src/main/res/layout/reminders_item.xml
+++ b/app/src/main/res/layout/reminders_item.xml
@@ -18,40 +18,24 @@
             android:orientation="horizontal"
             android:weightSum="3">
 
-            <ImageView
-                android:id="@+id/edit"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:clickable="true"
-                android:src="@drawable/pencil" />
-
             <TextView
                 android:id="@+id/reminderDialogTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="2"
+                android:layout_marginLeft="30dp"
                 android:textColor="#000000"
+                android:textSize="16dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/reminder_date"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="0.5"
                 android:textColor="#000000"
-                android:textSize="12dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/grade"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="0.5"
-                android:textColor="#000000"
-                android:textStyle="bold" />
+                android:textSize="16dp"
+                android:textStyle="italic" />
 
         </LinearLayout>
     </LinearLayout>
