--- a/app/src/main/res/layout/new_course_dialog.xml
+++ b/app/src/main/res/layout/new_course_dialog.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/course_name"
         android:hint="Course Credits"
-        android:inputType="number" />
+        android:inputType="numberDecimal" />
 
     <EditText
         android:id="@+id/course_grade"
