--- a/app/src/main/res/layout/activity_gpa.xml
+++ b/app/src/main/res/layout/activity_gpa.xml
@@ -8,21 +8,26 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
+        android:layout_gravity="center_horizontal"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/prevSem"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/prev" />
+            android:background="@drawable/prev"
+            android:foregroundGravity="left" />
+
+        <Space
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/semester"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="center"
             android:text="Semester Number:"
             android:textSize="18sp" />
 
@@ -30,29 +35,33 @@
             android:id="@+id/semesterText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="center"
             android:text="####"
             android:textSize="18sp" />
+
+        <Space
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/nextSem"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_weight="1"
+            android:layout_gravity="right"
             android:background="@drawable/next" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/gpaPreview"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="Current GPA:"
             android:textSize="24sp" />
 
@@ -60,7 +69,6 @@
             android:id="@+id/gpaText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="####"
             android:textSize="24sp" />
     </LinearLayout>
@@ -68,21 +76,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:orientation="horizontal">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
         android:layout_margin="5dp"
         android:orientation="vertical">
 
         <ListView
             android:id="@+id/remindersList"
             android:layout_width="fill_parent"
-            android:layout_height="500dp"
+            android:layout_height="560dp"
             android:background="#C3E0F5"
             android:divider="#FFFFFF"
             android:dividerHeight="2dp"
