--- a/app/src/main/res/layout/reminders_item.xml
+++ b/app/src/main/res/layout/reminders_item.xml
@@ -14,16 +14,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:background="#C3E0F5"
+            android:background="#FBF793"
             android:orientation="horizontal"
             android:weightSum="3">
+
+            <Space
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="5dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="#FF0000" />
 
             <TextView
                 android:id="@+id/reminderDialogTitle"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="5dp"
                 android:textColor="#000000"
                 android:textSize="16dp"
                 android:textStyle="bold" />
