--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#CFDEE9"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/alarmPic"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="30dp"
+        app:srcCompat="@drawable/alarm_image" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="75dp"
         android:layout_marginRight="25dp"
-        android:text="Please insert the amounts of minutes that you want to study"
+        android:gravity="center"
+        android:text="Insert the amounts of minutes for studying"
         android:textSize="24sp" />
 
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <EditText
